--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "devCommand": "npm run dev",
-  "framework": "vite",
-  "env": {
-    "GEMINI_API_KEY": "@gemini_api_key"
-  }
+  "framework": "vite"
 }
